--- a/Market Regime.ipynb
+++ b/Market Regime.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_data = pd.read_excel(\"./Data/Data.xlsx\", index_col = 0)\n",
+    "raw_data = pd.read_excel(\"Data.xlsx\", index_col = 0)\n",
     "raw_data = raw_data.drop(['US Nominal Yield'], axis=1)"
    ]
   },
